using spacebetween instead of spacearound for justify content

--- a/src/Banner.css
+++ b/src/Banner.css
@@ -1,6 +1,6 @@
 #banner-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 #title-container {
